update datatable stuff build target 11 correct module name v3